--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@ body {
 
 #wrapper {
 		width: 1000px;
-		background: #fff;
 		margin: 0 auto;
+		background: #fff;
 }
 
 .clearfix::after {
@@ -18,95 +18,99 @@ body {
 }
 
 /*---HEADER---*/
-.header {
-		padding: 0 40px;
-}
-
 .logo {
 		float: left;
-		width: 40%;
-}
-
-.contacts p {
-		text-align: right;
-		padding-bottom: 60px;
-		color: #099;
-		font-size: 12px;
-		line-height: 15px;
-}
-
-.contacts p:first-line {
-		font-weight: bold;
+		margin-top: 49px;
+		margin-left: 27px;
 }
 
 .contacts {
+		width: 20%;
 		float: right;
-		width: 45%;
-		padding-top: 10px;
-		text-align: right
+		margin-top: 45px;
+		margin-bottom: 29px;
+}
+
+.contacts li {
+		padding-left: 42px;
+		color: #099;
+		font-size: 12px;
+		line-height: 19px;
+		text-align: left;
+}
+
+.contacts li:first-child {
+		font-weight: bold;
+}
+
+.countris {
+		width: 50%;
+		float: right;
+		margin-right: 27px;
 }
 
 .countris li a {
+		display: block;
 		color: #099;
 		font-size: 10px;
+		line-height: 10px;
 }
 
 .countris li {
 		position: relative;
 		float: right;
-		height: auto;
-		width: 60px;
+		width: 57px;
 		text-align: center;
 }
 
 .beach {
 		display: block;
-		width: 100%;		
+		width: 100%;
 }
 
 /*---MENU---*/
 .menu {
-		padding-left: 10px;
-		background: #333;
+		padding-left: 31px;
 		border-bottom: 1px solid #000;
-		-webkit-box-shadow: 0 3px 3px #575555;
+		background: #333;
 		-moz-box-shadow: 0 3px 3px #575555;
+		-webkit-box-shadow: 0 3px 3px #575555;
 		box-shadow: 0 3px 3px #575555;
 }
 
 .menu li a {
 		padding-left: 10px;
-		text-decoration: none;
 		color: #fff;
 		font-size: 14px;
+		text-decoration: none;
 }
 
 .menu > li {
 		position: relative;
-		z-index: 1;
-		float: left;
 		height: 20px;
+		float: left;
 		margin-left: 5px;
+		padding: 4px 20px 4px 22px;
 		cursor: pointer;
-		padding: 6px 20px;		
+		z-index: 1;
 }
 
-.trigon:after {
-		content: "\25BC";
-		color: white;
-		font-size: 8px;
+.trigon::after {
+		content: '\25BC';
 		padding-left: 5px;
+		color: #fff;
+		font-size: 8px;
 }
 
 .submenu {
 		display: none;
 		position: absolute;
-		top: 100%;
-		left: auto;
-		right: auto;
 		width: 100%;
-		-webkit-box-shadow: 0 4px 10px 1px #575555;
+		top: 100%;
+		right: auto;
+		left: auto;
 		-moz-box-shadow: 0 4px 10px 1px #575555;
+		-webkit-box-shadow: 0 4px 10px 1px #575555;
 		box-shadow: 0 4px 10px 1px #575555;
 }
 
@@ -129,13 +133,13 @@ body {
 		display: block;
 		width: 100%;
 		padding-left: 10px;
-		color: #fff;
 		background-color: #333;
+		color: #fff;
 		text-decoration: none;
 }
 
 .menu > li:hover .submenu {
-		display: block;		
+		display: block;
 }
 
 /*--- CONTENT---*/
@@ -143,33 +147,33 @@ body {
 		width: 100%;
 		overflow: hidden;
 		padding-top: 5px;
-		z-index: 2;
-		-webkit-box-shadow: 0 0 3px #031d28;
 		-moz-box-shadow: 0 0 3px #031d28;
+		-webkit-box-shadow: 0 0 3px #031d28;
 		box-shadow: 0 0 3px #031d28;
+		z-index: 2;
 }
 
 h1 {
-		text-align: center;
-		font-size: 20px;
 		color: #333;
-		padding-bottom: 10px;
+		font-size: 20px;
+		text-align: center;
 }
 
 .content p {
-		text-align: center;
+		padding-bottom: 8px;
 		color: #333;
 		font-size: 14px;
 		line-height: 24px;
+		text-align: center;
 }
 
 .info {
 		float: left;
 		width: 21%;
 		padding-top: 10px;
-		border-right: 1px solid #ccc;
 		margin-bottom: -20000px;
 		padding-bottom: 20000px;
+		border-right: 1px solid #ccc;
 		background: #edeef0;
 }
 
@@ -182,12 +186,13 @@ h1 {
 
 .news {
 		float: right;
-		width: 21%;
+		width: 19%;
 		padding: 10px;
 		margin-bottom: -20000px;
 		padding-bottom: 20000px;
-		background: #edeef0;
 		border-left: 1px solid #ccc;
+		background: #edeef0;
+
 }
 
 /*---FOOTER---*/
