--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 		font-family: 'Open Sans', Arial, sans-serif;
 }
 
-#wrapper {
+.wrapper {
 		width: 1000px;
 		margin: 0 auto;
 		background: #fff;
